# colubris-engine

./: .gitignore  CMakeLists.txt  LICENSE  TODO  readme.md
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm-0.9.9.8/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  types.hpp
src/colliders/: CMakeLists.txt  circle_collider.cpp  circle_collider.hpp  collider.cpp  collider.hpp  collider.md  colliders.md
src/colliders/bounding_box/: bounding_box.cpp  bounding_box.hpp
src/colliders/collider/: collider.cpp  collider.hpp
src/colliders/collider_shape/: collider_shape.cpp  collider_shape.hpp
src/collision_manager/: CMakeLists.txt  collision_manager.cpp  collision_manager.hpp
src/component/: CMakeLists.txt  component.cpp  component.hpp  component.md  component_locator.hpp  component_locator_i.hpp  component_locator_worker.hpp  component_manager.hpp
src/containers/: CMakeLists.txt  raw_buffer.hpp
src/entity/: CMakeLists.txt  entity.hpp
src/event/: CMakeLists.txt  event.cpp  event.hpp  event.md  event_queue.cpp  event_queue.hpp  event_templates.hpp
src/gameobject/: CMakeLists.txt  gameobject.cpp  gameobject.hpp  gameobject.md  gameobject_templates.hpp
src/hierarchy_tree/: CMakeLists.txt  hierarchy_tree.cpp  hierarchy_tree.hpp  hierarchy_tree.md
src/include_bundles/: CMakeLists.txt  component_utils.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp  input.md
src/layer/: CMakeLists.txt  layer.cpp  layer.hpp
src/layers/: CMakeLists.txt  base_layer.cpp  base_layer.hpp  layer.cpp  layer.hpp  layer_collection.cpp  layer_collection.hpp  layers.md  main_layer.cpp  main_layer.hpp  render_layer.cpp  render_layer.hpp
src/math/: CMakeLists.txt  geometry.cpp  geometry.hpp  math.hpp  math.md  math_core.cpp  math_core.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp  mesh.md  mesh_single.cpp
src/mesh/mesh/: mesh.cpp  mesh.hpp
src/mesh/mesh_single/: mesh_single.cpp  mesh_single.hpp
src/mesh/vertex/: vertex.cpp  vertex.hpp
src/mouse_component/: CMakeLists.txt  mouse_component.cpp  mouse_component.hpp
src/random/: CMakeLists.txt  random.cpp  random.hpp  random.md
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp  renderer.md
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp  scene.md
src/scene_manager/: CMakeLists.txt  scene_manager.cpp  scene_manager.hpp  scene_manager.md
src/scripts/: CMakeLists.txt  bullet.hpp  example.md  initialisation.cpp  on_collision_example.hpp  player_controller.hpp  script1.hpp  script2.hpp  script3.hpp  scripts.md  short_lived_example.hpp  user_input_example.hpp
src/scripts/v1.0-example-01/: CMakeLists.txt  example.md  on_collision_example.hpp  short_lived_example.hpp
src/scripts/v1.1-example-01/: bullet.hpp  enemy_controller.hpp  enemy_spawner.hpp  example.md  game_controller.hpp  initialisation.cpp  player_controller.hpp
src/scripts/v1.1-example-02/: CMakeLists.txt  example.md  game_data.hpp  game_manager.hpp  initialisation.cpp  player_controller.hpp  sheep_controller.hpp
src/scripts/v1.2-event-example-01/: CMakeLists.txt  initialisation.cpp
src/scripts/v1.2-mouse-example-01/: CMakeLists.txt  box.hpp  initialisation.cpp  player.hpp
src/scripts/v1.2-z_index-example-01/: CMakeLists.txt  initialisation.cpp  player.hpp
src/scripts/v1.3-testing/: initialisation.cpp
src/shaders/: CMakeLists.txt  mesh_shader.vs  shader.cpp  shader.fs  shader.hpp  shader.md  shaders.md  text_shader.fs  text_shader.vs
src/shapes/: CMakeLists.txt  bounding_box.hpp  convex_shape.cpp  convex_shape.hpp  shape.cpp  shape.hpp
src/text/: CMakeLists.txt  character.cpp  character.hpp  text.cpp  text.hpp  text.md
src/time/: CMakeLists.txt  time.cpp  time.hpp  time.md
src/transform/: CMakeLists.txt  transform.cpp  transform.hpp  transform.md
