
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/renderer/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/shaders/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gameobject/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/component/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mesh/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/scripts/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/input/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/event/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/colliders/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/scene_manager/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/transform/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/math/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/random/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/time/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/text/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/layers/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hierarchy_tree/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/include_bundles/)

set(MODULES
	${CMAKE_CURRENT_SOURCE_DIR}/renderer/
	${CMAKE_CURRENT_SOURCE_DIR}/shaders/
	${CMAKE_CURRENT_SOURCE_DIR}/gameobject/
	${CMAKE_CURRENT_SOURCE_DIR}/component/
	${CMAKE_CURRENT_SOURCE_DIR}/mesh/
	${CMAKE_CURRENT_SOURCE_DIR}/input/
	${CMAKE_CURRENT_SOURCE_DIR}/event/
	${CMAKE_CURRENT_SOURCE_DIR}/colliders/
	${CMAKE_CURRENT_SOURCE_DIR}/colliders/collider/
	${CMAKE_CURRENT_SOURCE_DIR}/scene_manager/
	${CMAKE_CURRENT_SOURCE_DIR}/transform/
	${CMAKE_CURRENT_SOURCE_DIR}/math/
	${CMAKE_CURRENT_SOURCE_DIR}/random/
	${CMAKE_CURRENT_SOURCE_DIR}/time/
	${CMAKE_CURRENT_SOURCE_DIR}/text/
	${CMAKE_CURRENT_SOURCE_DIR}/layers/
	${CMAKE_CURRENT_SOURCE_DIR}/hierarchy_tree/
	${CMAKE_CURRENT_SOURCE_DIR}/include_bundles/
	${CMAKE_CURRENT_SOURCE_DIR}/
	PARENT_SCOPE
)

set(EXE_SOURCE
	${RENDERER_SOURCE}
	${SHADER_SOURCE}
	${GAMEOBJECT_SOURCE}
	${COMPONENT_SOURCE}
	${MESH_SOURCE}
	${SCRIPTS_SOURCE}
	${INPUT_SOURCE}
	${EVENT_SOURCE}
	${COLLIDERS_SOURCE}
	${SCENE_MANAGER_SOURCE}
	${TRANSFORM_SOURCE}
	${MATH_SOURCE}
	${RANDOM_SOURCE}
	${TIME_SOURCE}
	${TEXT_SOURCE}
	${LAYERS_SOURCE}
	${HIERARCHY_TREE_SOURCE}
	${INCLUDE_BUNDLES_SOURCE}
	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/types.hpp
	PARENT_SCOPE
)